[package]
edition = "2024"
name = "embassy-rp-hc05"
version = "0.1.1"
authors = ["Jorge Andre Castro <georgeandrec@gmail.com>"]
build = false
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Wrapper async no_std pour le module Bluetooth HC-05 (RP2040/RP235x)."
documentation = "https://docs.rs/embassy-rp-hc05"
readme = "README.md"
keywords = [
    "embassy",
    "hc05",
    "bluetooth",
    "uart",
    "no-std",
]
categories = [
    "embedded",
    "no-std",
    "hardware-support",
]
license = "GPL-2.0-or-later"
repository = "https://github.com/jorgeandrecastro/embassy-rp-hc05"

[lib]
name = "embassy_rp_hc05"
path = "src/lib.rs"

[dependencies.embassy-rp]
version = ">=0.4, <0.11"
features = ["unstable-pac"]

[dependencies]
itoa = ">=1.0, <2"

[features]
default = ["rp2040"]
rp2040 = ["embassy-rp/rp2040"]
rp235x = ["embassy-rp/rp235xa"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true